[package]
name = "kartoffels"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
kartoffels-vm = { path = "../kartoffels-vm" }

ahash = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
ciborium = { workspace = true }
derivative = { workspace = true }
futures-util = { workspace = true }
glam = { workspace = true }
itertools = { workspace = true }
lru = { workspace = true }
maybe-owned = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
pretty_assertions = { workspace = true }
rand_chacha = { workspace = true }
test-case = { workspace = true }
